--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,16 @@
       "runtime": "vercel-php@0.5.1"
     }
   },
+  "builds": [
+    {
+      "src": "public/build/**/*",
+      "use": "@vercel/static"
+    }
+  ],
   "routes": [
-    { "src": "/(.*)", "dest": "api/index.php" }
+    {
+      "src": "/(.*)",
+      "dest": "api/index.php"
+    }
   ]
 }
