--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,11 @@
 {
   "version": 2,
-  "functions": {
-    "api/index.php": {
-      "runtime": "vercel-php@0.5.1"
-    }
-  },
   "builds": [
-    {
-      "src": "public/build/**/*",
-      "use": "@vercel/static"
-    }
+    { "src": "api/index.php", "use": "@vercel/php" },
+    { "src": "public/**", "use": "@vercel/static" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "api/index.php"
-    }
+    { "src": "/api/(.*)", "dest": "api/index.php" },
+    { "src": "/(.*)", "dest": "public/$1" }
   ]
 }
