--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^5.2.4",
+        "@inertiajs/vue3": "^1.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@vitejs/plugin-vue": "^5.0.0",
+        "autoprefixer": "^10.4.12",
         "axios": "^1.9.0",
         "laravel-vite-plugin": "^1.0.0",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.2.1",
         "vite": "^5.4.19",
-        "vue": "^3.5.13"
+        "vue": "^3.4.0"
     },
     "dependencies": {
         "laravel-echo": "^2.1.0",
